<resources>
    <string name="app_name">test1</string>
    <string name="home">Home</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="add">ADD</string>
    <string name="update profile">UPDATE</string>
    <string name="update_Profile">Update Profile</string>
    <string name="profileManage">Profile Management</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
</resources>